Precising Syllable Extraction